[gd_scene load_steps=4 format=3 uid="uid://d0lp1xh615hj6"]

[ext_resource type="Script" path="res://ui/inventory/inventory_row.gd" id="1_4mfrv"]
[ext_resource type="Script" path="res://ui/hint_button/hint_button.gd" id="2_py0ph"]
[ext_resource type="PackedScene" uid="uid://d03ug02ej8y74" path="res://objects/item/item.tscn" id="2_ycyed"]

[node name="InventoryRow" type="HBoxContainer"]
offset_right = 111.0
offset_bottom = 40.0
script = ExtResource("1_4mfrv")

[node name="DropButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
script = ExtResource("2_py0ph")

[node name="SubViewportContainer" type="SubViewportContainer" parent="DropButton"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 36.0
offset_bottom = 36.0

[node name="SubViewport" type="SubViewport" parent="DropButton/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(32, 32)
render_target_update_mode = 4

[node name="Item" parent="DropButton/SubViewportContainer/SubViewport" instance=ExtResource("2_ycyed")]
texture_filter = 1
scale = Vector2(3, 3)
offset = Vector2(2, 2)
region_rect = Rect2(72, 40, 8, 8)
item_name = "Iron ring"

[node name="QuantityLabel" type="Label" parent="DropButton"]
layout_mode = 2
offset_right = 19.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "43
"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "Iron ring"
